--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "sig-backend-postgre",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1"
