--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {},
